2011-07-05  Kentaro Hara  <haraken@google.com>

Trigger a 'change' event whenever selected files are changed
        https://bugs.webkit.org/show_bug.cgi?id=63929

        Reviewed by Kent Tamura.

        Record previously selected files and then compare them with newly selected files.
        If the previously selected files and their order are not equal to those of
        the newly selected files, we trigger the 'change' event.

        * fast/forms/file-input-change-event-expected.txt: Added.
        * fast/forms/file-input-change-event.html: Added.
2011-07-05  Kentaro Hara  <haraken@google.com>

        Trigger a 'change' event whenever selected files are changed
        https://bugs.webkit.org/show_bug.cgi?id=63929

        Reviewed by Kent Tamura.

        Record previously selected files and then compare them with newly selected files.
        If the previously selected files and their order are not equal to those of
        the newly selected files, we trigger the 'change' event.

        Test: fast/forms/file-input-change-event.html

        * html/FileInputType.cpp:
        (WebCore::FileInputType::filesChosen): Calls dispathChangeEvent() only when the previously selected files are different from the newly selected files

Canonical link: https://commits.webkit.org/79704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90438 268f45cc-cd09-0410-ab3c-d52691b4dbfc